--- a/css/style.css
+++ b/css/style.css
@@ -26,11 +26,11 @@ body{
 }
 .principal{
    text-align: center;
-   margin: 30% 0 0 0;
 }
-/*.estrela{
-
-}*/
+.gifMeioDeTela{
+    width: 10%;
+    margin: 10%;
+}
 .btnSorteia{
     padding: 15px 25px;
     font-size: 2em;
@@ -66,6 +66,9 @@ body{
     .jakeGif{
         width: 23%;
         left: 75%;
+    }
+    .gifMeioDeTela{
+        width: 30%;
     }
 }
 
